задание X
